// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DatePicker /> should render snapshot correctly 1`] = `
.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 svg {
  width: 1rem;
  height: 1rem;
}

.c1 {
  position: relative;
  font-family: Poppins,sans-serif;
}

.c2 {
  width: 100%;
  height: 40px;
  font-size: 1rem;
  padding-top: 0;
  padding-bottom: 0;
  box-sizing: border-box;
  font-family: Poppins,sans-serif;
  border: 1px solid #A0A3BD;
  background-color: #FCFCFC;
  border-radius: 1rem;
  outline: none;
  padding-left: 1.5rem;
  padding-right: 3rem;
}

.c2:focus {
  border-color: #14142B;
}

.c2[value]:not([value='']) + label,
.c2:focus + label {
  color: #6E7191;
  font-size: 0.875rem;
  -webkit-transform: translateY(calc(-100% - 10px));
  -ms-transform: translateY(calc(-100% - 10px));
  transform: translateY(calc(-100% - 10px));
}

.c3 {
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 1rem;
  background-color: transparent;
  border: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  margin: 0;
  position: absolute;
  top: 50%;
  right: 1rem;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c0 {
  position: relative;
}

<div
  class="c0"
  role="button"
  tabindex="0"
>
  <div
    class="c1"
  >
    <input
      class="c2"
      placeholder="21/12/2021"
      type="text"
      value=""
    />
    <button
      class="c3"
      type="button"
    >
      <div
        class="c4 icon-right"
        data-icon-name="calendar"
      >
        <span />
      </div>
    </button>
  </div>
</div>
`;

exports[`<RangeDatePicker /> should render snapshot correctly 1`] = `
.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 svg {
  width: 1rem;
  height: 1rem;
}

.c2 {
  position: relative;
  font-family: Poppins,sans-serif;
}

.c3 {
  width: 100%;
  height: 40px;
  font-size: 1rem;
  padding-top: 0;
  padding-bottom: 0;
  box-sizing: border-box;
  font-family: Poppins,sans-serif;
  border: 1px solid #A0A3BD;
  background-color: #FCFCFC;
  border-radius: 1rem;
  outline: none;
  padding-left: 1.5rem;
  padding-right: 3rem;
}

.c3:focus {
  border-color: #14142B;
}

.c3[value]:not([value='']) + label,
.c3:focus + label {
  color: #6E7191;
  font-size: 0.875rem;
  -webkit-transform: translateY(calc(-100% - 10px));
  -ms-transform: translateY(calc(-100% - 10px));
  transform: translateY(calc(-100% - 10px));
}

.c4 {
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 1rem;
  background-color: transparent;
  border: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  margin: 0;
  position: absolute;
  top: 50%;
  right: 1rem;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c0 {
  position: relative;
  outline: none;
}

.c1 {
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: 1fr auto 1fr;
}

.c6 {
  margin: 0 10px;
}

<div
  class="c0"
  role="button"
  tabindex="0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <input
        class="c3"
        placeholder="DD/MM/AAAA"
        type="text"
        value=""
      />
      <button
        class="c4"
        type="button"
      >
        <div
          class="c5 icon-right"
          data-icon-name="calendar"
        >
          <span />
        </div>
      </button>
    </div>
    <span
      class="c6"
    >
      <div
        class="c5"
        data-icon-name="longArrowRight"
      >
        <span />
      </div>
    </span>
    <div
      class="c2"
    >
      <input
        class="c3"
        placeholder="DD/MM/AAAA"
        type="text"
        value=""
      />
      <button
        class="c4"
        type="button"
      >
        <div
          class="c5 icon-right"
          data-icon-name="calendar"
        >
          <span />
        </div>
      </button>
    </div>
  </div>
</div>
`;
